--- a/media.css
+++ b/media.css
@@ -42,6 +42,12 @@
   }
 }
 
+/* @media (max-width: 1350px) {
+  .calculate-inner {
+    flex-wrap: wrap;
+  }
+} */
+
 @media (max-width: 1070px) {
   .form-grid-wrapper {
     column-gap: 10px;
@@ -82,6 +88,20 @@
   }
   .map-wrap {
     width: 100%;
+  }
+
+  .calculate-inner {
+    flex-direction: column;
+  }
+  .calculate-table-wrapper {
+    aspect-ratio: 1.5;
+    margin-top: 30px;
+  }
+  .bmi-table {
+    width: 80%;
+  }
+  .calculate-table-wrapper::after {
+    display: none;
   }
 
   .footer-main {
@@ -142,20 +162,6 @@
   }
   .calculate {
     padding-bottom: 1.125rem;
-  }
-
-  .calculate-inner {
-    flex-direction: column;
-  }
-  .calculate-table-wrapper {
-    aspect-ratio: 1.5;
-    margin-top: 30px;
-  }
-  .bmi-table {
-    width: 80%;
-  }
-  .calculate-table-wrapper::after {
-    display: none;
   }
 }
 @media (max-width: 780px) {
