--- a/variables.css
+++ b/variables.css
@@ -18,7 +18,7 @@
 
   --input-height: 3.375rem;
 
-  --container-width: 1300px;
+  --container-width: 81.25rem;
   --container-padding-x: 0.9375rem;
 
   --transition-duration: 0.2s;
